Fix flex wrap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -337,6 +337,15 @@ h5 {
   color: #c82333;
 }
 
+.create-recipe-title {
+  display: flex;
+  justify-content: center;
+}
+
+.create-recipe-title-text {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
 
 /* recipe */
 
@@ -357,6 +366,7 @@ h5 {
 
 .my-recipe-card {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .my-recipe-card .quantity_field {
@@ -384,6 +394,9 @@ h5 {
   border-collapse: separate;
 }
 
+.description-column {
+  max-width: 400px;
+}
 
 /* user dashboard */
 
@@ -393,6 +406,7 @@ h5 {
 
 .recipe-cards-container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .recipe-card-ud {
